# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
.github/workflows/: main.yml
configuration/: base.yaml  production.yaml
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  util.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs  subscription_token.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: mod.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  post.rs
templates/: admin_dashboard.html  change_password.html  email.template  login.html  newsletter_form.html
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helper.rs  login.rs  logout.rs  main.rs  newsletter.rs  subscription.rs  subscription_confirm.rs
