[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.12"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
tracing-actix-web = "0.5"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "3.0.1"
unicode-segmentation = "1.9.0"
validator = "0.14.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rand = { version = "0.8", features= ["std_rng"] }
thiserror = "1.0.30"
anyhow = "1.0.56"
base64 = "0.13.0"
argon2 = { version = "0.3", features = ["std"] }
urlencoding = "2.1.0"
askama = "0.11.1"
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
hex = "0.4.3"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
once_cell = "1"
claim = "0.5.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3.0"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5.11"
serde_json = "1"
linkify = "0.8.0"
